# networks_NSU

./: .gitignore  .gitmodules  README.md  dns-resolver.h  networks_NSU.sln
lab1/: README.md  docker-compose.yml
lab1/multicast_server/: Dockerfile  Makefile  client.cpp  main.cpp  multicast_app.cpp  server.cpp  udp_socket.cpp
lab1/multicast_server/exceptions/: socket_exceptions.cpp
lab1/multicast_server/include/: client.h  multicast_app.h  server.h  udp_socket.h
lab2/: README.md
lab2/tcp_transfer/: Makefile  main.cpp  tcp_client.cpp  tcp_server.cpp
lab2/tcp_transfer/exceptions/: client_exceptions.cpp  server_exceptions.cpp
lab2/tcp_transfer/include/: tcp_client.h  tcp_server.h
lab3/: README.md
lab3/socks_proxy/: CMakeLists.txt  Makefile  main.cpp  socket.cpp  socks_client.cpp  socks_server.cpp  tunnel.cpp
lab3/socks_proxy/include/: buffer.h  ip.h  observe.h  socket.h  socks_client.h  socks_server.h  tunnel.h
lab4/: README.md
lab4/api/: Api.cs  InformJson.cs
lab4/api/Description/: DescriptionApi.cs  DescriptionInfo.cs
lab4/api/InterestingPlaces/: InterestingPlaces.cs
lab4/api/Location/: LocationApi.cs  PlacesInfo.cs
lab4/api/Weather/: WeatherApi.cs
lab4/places/: App.axaml  App.axaml.cs  Program.cs  ViewLocator.cs  app.manifest  places.csproj
lab4/places/Models/: Api.cs  InformJson.cs
lab4/places/Utils/: Converter.cs  Graphics.cs  RegexWorker.cs
lab4/places/ViewModels/: ApiWorker.cs  MainWindowViewModel.cs  PlacesService.cs  ViewModelBase.cs
lab4/places/Views/: MainWindow.axaml  MainWindow.axaml.cs
(+9 files in other folders)
